# apertium-mkd-eng

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  HOURS  Makefile  Makefile.am  README  apertium-mk-en.en.dix  apertium-mk-en.mk-en.dix  apertium-mk-en.mk-en.lex  apertium-mk-en.mk-en.t1x  apertium-mk-en.mk-en.t3x  apertium-mkd-eng.mkd-eng.lrx  configure.ac  modes.xml  wiki-tests.sh
.deps/: apertium-mk-en.mk-en.dix
dev/: bilingual-summary.txt  generation-summary.txt  generation-test.sh  inconsistency-summary.sh  inconsistency.sh  pending_adjectives.txt  pending_adverbs.txt  pending_nouns.txt  pending_verbs.txt  test_phrases.txt  testvoc-summary.txt
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_nouns.txt  pending_numerals.txt  pending_prepositions.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/eval/: setimes.2010-09-18.mk-en.txt  wikipedia.2010-09-18.mk-en.txt
test/: mkd-eng-pending-biltrans-expected.txt  mkd-eng-pending-disam-expected.txt  mkd-eng-pending-generator-expected.txt  mkd-eng-pending-input.txt  mkd-eng-pending-interchunk-expected.txt  mkd-eng-pending-morph-expected.txt  mkd-eng-pending-postchunk-expected.txt  mkd-eng-pending-postgen-expected.txt  mkd-eng-pending-postgen-gold.txt  mkd-eng-pending-pretransfer-expected.txt  mkd-eng-pending-tagger-expected.txt  tests.json
